k8s/deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: rebook
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: rebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: srujanreddynadipi/rebook-eureka-server:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: rebook
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: rebook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: srujanreddynadipi/rebook-api-gateway:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: rebook
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: rebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: srujanreddynadipi/rebook-auth-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: rebook
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: rebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: srujanreddynadipi/rebook-frontend:latest
          ports:
            - containerPort: 80
