k8s/nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-nodeport
  namespace: rebook
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: rebook
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
